[components] add nav

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import Layout from "@/layouts/layout.astro";
+import Nav from "@/components/nav.astro"
 ---
 
 <Layout title="Javier Alarcon">
-	<h1 class="text-white text-3xl">Astro</h1>
+	<Nav />
 </Layout>
