[components] add home

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from "@/layouts/layout.astro";
 import Nav from "@/components/nav.astro"
+import Home from "@/components/home.astro"
 ---
 
 <Layout title="Javier Alarcon">
 	<Nav />
+	<Home />
 </Layout>
