--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import Layout from "@/layouts/layout.astro";
 import Nav from "@/components/nav.astro"
 import Home from "@/components/home.astro"
+import Projects from "@/components/projects.astro"
 ---
 
 <Layout title="Javier Alarcon">
 	<Nav />
 	<Home />
+	<Projects />
 </Layout>
