--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,12 @@ import Layout from "@/layouts/layout.astro";
 import Nav from "@/components/nav.astro"
 import Home from "@/components/home.astro"
 import Projects from "@/components/projects.astro"
+import Contact from "@/components/contact.astro"
 ---
 
 <Layout title="Javier Alarcon">
 	<Nav />
 	<Home />
 	<Projects />
+	<Contact />
 </Layout>
