[components] add footer

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Nav from "@/components/nav.astro"
 import Home from "@/components/home.astro"
 import Projects from "@/components/projects.astro"
 import Contact from "@/components/contact.astro"
+import Footer from "@/components/footer.astro"
 ---
 
 <Layout title="Javier Alarcon">
@@ -11,4 +12,5 @@ import Contact from "@/components/contact.astro"
 	<Home />
 	<Projects />
 	<Contact />
+	<Footer />
 </Layout>
