--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -72,8 +72,11 @@
     try {
       const response = await fetch(form.action, {
         method: "POST",
-        body: formData,
-        headers: { Accept: "application/json" },
+        body: JSON.stringify(Object.fromEntries(formData)),
+        headers: {
+          Accept: "application/json",
+          "Content-Type": "application/json",
+        },
       });
       if (response.ok) {
         form.reset();
