--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -9,7 +9,7 @@ import lotengotodostore from "../../public/projects/lotengotodostore.jpg";
 
 interface Project {
   title: string;
-  image: ImageMetadata;
+  image: string;
   preview: string;
   status: string;
 }
@@ -17,25 +17,25 @@ interface Project {
 const projects: Project[] = [
   {
     title: "Centro de reparaciones la oriental",
-    image: centro as ImageMetadata,
+    image: "/projects/centroreparacioneslaoriental.jpg",
     preview: "https://centrodereparacioneslaoriental.com",
     status: "On Production",
   },
   {
     title: "Especificalo",
-    image: especificalo as ImageMetadata,
+    image: "/projects/especificalo.jpg",
     preview: "https://especificalo.com",
     status: "On Production",
   },
   {
     title: "Fagoo",
-    image: fagoo as ImageMetadata,
+    image: "/projects/fagoo.jpg",
     preview: "https://fagoo.co",
     status: "Contributor",
   },
   {
     title: "Lo tengo todo store",
-    image: lotengotodostore as ImageMetadata,
+    image: "/projects/lotengotodostore.jpg",
     preview: "https://lotengotodostore.com",
     status: "On Production",
   },
@@ -61,7 +61,7 @@ const projects: Project[] = [
               class="block"
             >
               <div class="rounded-2xl overflow-hidden shadow-lg hover:shadow-xl transition-shadow duration-300 mb-4">
-                <Image
+                <img
                   src={project.image}
                   alt={project.title}
                   class="w-full h-48 md:h-72 object-cover group-hover:scale-105 transition-transform duration-300"
