--- a/src/components/manager/sidebar.astro
+++ b/src/components/manager/sidebar.astro
@@ -2,8 +2,8 @@
   class="w-1/2 md:w-1/3 lg:w-64 fixed md:top-0 md:left-0 h-screen lg:block bg-gray-100 border-r z-30 hidden"
   id="main-nav"
 >
-  <div class="w-full h-20 border-b flex px-4 items-center mb-8">
-    <p class="font-semibold text-3xl text-blue-400 pl-4">LOGO</p>
+  <div class="w-full h-20 border-b flex px-4 justify-center mb-8">
+    <img src="/logo-large-black.png" alt="logo" class="h-20 p-2" />
   </div>
 
   <div class="mb-4 px-4">
