--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content="Software Developer" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/logo-black.png" />
     <meta property="og:title" content="Javier Alarcon" />
     <meta property="og:description" content="Software Developer" />
     <meta property="og:image" content="https://javidevelop.com/og.image.png" />
