--- a/src/pages/manager/index.astro
+++ b/src/pages/manager/index.astro
@@ -25,6 +25,9 @@ if (Astro.request.method === "POST") {
 <Layout title="Manager">
   <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
     <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+      <div class="flex items-center justify-center">
+        <img src="/logo-large-white.png" alt="logo" class="h-20" />
+      </div>
       <h2
         class="mt-10 text-center text-2xl/9 font-bold tracking-tight text-white"
       >
