agregado enlaces de interes

--- a/src/components/manager/sidebar.astro
+++ b/src/components/manager/sidebar.astro
@@ -1,3 +1,21 @@
+---
+const links =  [
+  {
+    name: "N8N",
+    href: "https://n8n.javidevelop.com"
+  },
+  {
+    name: "Evolution api",
+    href: "https://evolution.javidevelop.com/manager"
+  },
+  {
+    name: "Dokploy",
+    href: "https://dokploy.javidevelop.com"
+  }
+]
+
+---
+
 <div
   class="w-1/2 md:w-1/3 lg:w-64 fixed md:top-0 md:left-0 h-screen lg:block bg-gray-100 border-r z-30 hidden"
   id="main-nav"
@@ -50,5 +68,23 @@
       </svg>
       <span class="text-gray-700">Settings</span>
     </a>
+  </div>
+  <div class="mb-4 px-4">
+    <p class="pl-4 text-sm font-semibold mb-1">MAIN</p>
+    {
+      links.map(item => {
+        return (
+          <a
+            href={item.href}
+            target="_blank"
+            rel="noopener noreferrer"
+            class="w-full flex items-center text-blue-400 h-10 pl-4 hover:bg-gray-200 rounded-lg cursor-pointer"
+          >
+            <svg class="mr-2" xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-link"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 15l6 -6" /><path d="M11 6l.463 -.536a5 5 0 0 1 7.071 7.072l-.534 .464" /><path d="M13 18l-.397 .534a5.068 5.068 0 0 1 -7.127 0a4.972 4.972 0 0 1 0 -7.071l.524 -.463" /></svg>
+            <span class="text-gray-700">{item.name}</span>
+          </a>
+        )
+      })
+    }
   </div>
 </div>
