ajustado menu sidebar

--- a/src/components/manager/navbar.astro
+++ b/src/components/manager/navbar.astro
@@ -1,7 +1,5 @@
 <div class="sticky top-0 z-40">
-  <div
-    class="w-full h-20 px-6 bg-gray-100 border-b flex items-center justify-between"
-  >
+  <div class="w-full h-20 px-6 border-b flex items-center justify-between">
     <!-- left navbar -->
     <div class="flex">
       <!-- mobile hamburger -->
@@ -12,7 +10,6 @@
         >
           <svg
             class="h-5 w-5"
-            v-bind:style="{ fill: 'black' }"
             viewBox="0 0 20 20"
             xmlns="http://www.w3.org/2000/svg"
             ><title>Menu</title><path
@@ -56,20 +53,12 @@
 
     <!-- right navbar -->
     <div class="flex items-center relative">
-      <!--
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        height="24"
-        viewBox="0 0 24 24"
-        width="24"
-        class="fill-current mr-3 hover:text-blue-500"
-        ><path d="M0 0h24v24H0z" fill="none"></path><path
-          d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2zm6-6v-5c0-3.07-1.63-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.64 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2zm-2 1H8v-6c0-2.48 1.51-4.5 4-4.5s4 2.02 4 4.5v6z"
-        ></path></svg
+      <div
+        class="w-12 h-12 rounded-full shadow-lg bg-white grid place-items-center"
+        onclick="toggleDropDown()"
       >
-      -->
-      
-      <svg class="w-12 h-12 p-2 rounded-full shadow-lg" onclick="toggleDropDown()"  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="currentColor"  class="icon icon-tabler icons-tabler-filled icon-tabler-user"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 2a5 5 0 1 1 -5 5l.005 -.217a5 5 0 0 1 4.995 -4.783z" /><path d="M14 14a5 5 0 0 1 5 5v1a2 2 0 0 1 -2 2h-10a2 2 0 0 1 -2 -2v-1a5 5 0 0 1 5 -5h4z" /></svg>
+        <img src="/icons/user.svg" alt="user" />
+      </div>
     </div>
   </div>
 
@@ -78,7 +67,9 @@
     class="absolute bg-gray-100 border border-t-0 shadow-xl text-gray-700 rounded-b-lg w-48 right-0 mr-6 hidden"
     id="dropDownMenu"
   >
-    <a href="/manager/logout" class="block px-4 py-2 hover:bg-gray-200">Logout</a>
+    <a href="/manager/logout" class="block px-4 py-2 hover:bg-gray-200"
+      >Logout</a
+    >
   </div>
   <!-- dropdown menu end -->
 </div>
