--- a/src/layouts/layout-admin.astro
+++ b/src/layouts/layout-admin.astro
@@ -49,9 +49,9 @@ const { title } = Astro.props;
     <div class="leading-normal tracking-normal" id="main-body">
       <div class="flex flex-wrap">
         <Sidebar />
-        <div class="w-full bg-gray-100 pl-0 lg:pl-64 min-h-screen" id="main-content">
+        <div class="w-full pl-0 lg:pl-64 min-h-screen" id="main-content">
           <Navbar />
-          <div class="p-6 bg-gray-100 mb-20">
+          <div class="p-6 mb-20">
             <slot />
           </div>
         </div>
@@ -109,5 +109,9 @@ const { title } = Astro.props;
   * {
     scrollbar-width: thin;
     scrollbar-color: var(--line) var(--container);
+  }
+
+  #main-content {
+    background-color: var(--background);
   }
 </style>
