agregada estructura para manejar proyectos

--- a/src/components/manager/sidebar.astro
+++ b/src/components/manager/sidebar.astro
@@ -6,14 +6,9 @@ const mainLinks = [
     icon: "/icons/home.svg",
   },
   {
-    name: "Webhooks",
-    href: "/manager/webhooks",
-    icon: "/icons/webhook.svg",
-  },
-  {
-    name: "Colas",
-    href: "/manager/queue",
-    icon: "/icons/rollercoaster.svg",
+    name: "Proyectos",
+    href: "/manager/projects",
+    icon: "/icons/components.svg",
   },
   {
     name: "Settings",
