--- a/src/components/manager/navbar.astro
+++ b/src/components/manager/navbar.astro
@@ -1,4 +1,4 @@
-<div class="sticky top-0 z-40">
+<div class="sticky top-0 z-40" id="navbar">
   <div class="w-full h-20 px-6 border-b flex items-center justify-between">
     <!-- left navbar -->
     <div class="flex">
