--- a/src/layouts/layout-admin.astro
+++ b/src/layouts/layout-admin.astro
@@ -62,7 +62,7 @@ const { title } = Astro.props;
 
 <style is:global>
   :root {
-    --background: #101010;
+    --background: #202020;
     --sec: #a476ff;
     --white: #dfdfdf;
     --white-icon: #f3f3f398;
@@ -113,5 +113,11 @@ const { title } = Astro.props;
 
   #main-content {
     background-color: var(--background);
+    color: var(--white);
+  }
+
+  #navbar {
+    background-color: var(--background);
+    color: var(--white);
   }
 </style>
