agregado servicios para ver proyectos y sus detalles

--- a/src/components/manager/table-instance.astro
+++ b/src/components/manager/table-instance.astro
@@ -18,7 +18,7 @@ const { instances } = Astro.props
 					<p
 						class="text-blue-gray-900 block font-sans text-sm font-normal leading-none antialiased opacity-70"
 					>
-						Name
+						Instance
 					</p>
 				</th>
 				<th class="border-blue-gray-100 bg-blue-gray-50 border-b p-4">
@@ -57,12 +57,12 @@ const { instances } = Astro.props
 						<tr>
 							<td class="border-blue-gray-50 border-b p-4">
 								<p class="text-blue-gray-900 block font-sans text-sm font-normal leading-normal antialiased">
-									{instance.name}
+									{instance.instance}
 								</p>
 							</td>
 							<td class="border-blue-gray-50 border-b p-4">
 								<p class="text-blue-gray-900 block font-sans text-sm font-normal leading-normal antialiased">
-									{instance.apiKey}
+									{instance.apikey}
 								</p>
 							</td>
 							<td class="border-blue-gray-50 border-b p-4">
