--- a/src/components/manager/table-queue.astro
+++ b/src/components/manager/table-queue.astro
@@ -57,7 +57,7 @@ const { queues } = Astro.props
 						<tr>
 							<td class="border-blue-gray-50 border-b p-4">
 								<p class="text-blue-gray-900 block font-sans text-sm font-normal leading-normal antialiased">
-									{queue.name}
+									{queue.queue}
 								</p>
 							</td>
 							<td class="border-blue-gray-50 border-b p-4">
