--- a/src/components/manager/table-instance.astro
+++ b/src/components/manager/table-instance.astro
@@ -10,7 +10,7 @@ const { instances } = Astro.props
 ---
 
 <div
-	class="relative flex h-full w-full flex-col rounded-xl bg-white bg-clip-border text-gray-700 shadow-md"
+	class="relative flex h-full w-full flex-col overflow-auto rounded-xl bg-white bg-clip-border text-gray-700 shadow-md"
 >
 	<table class="w-full min-w-max table-auto text-left">
 		<thead>
