--- a/src/components/manager/item-projects.astro
+++ b/src/components/manager/item-projects.astro
@@ -1,34 +1,32 @@
 ---
 interface Props {
-  title: string;
-  description: string;
-  slug: string;
+	title: string
+	description: string
+	slug: string
 }
 
-const { title, description, slug } = Astro.props;
+const { title, description, slug } = Astro.props
 ---
 
 <div
-  class="relative flex flex-col bg-clip-border rounded-xl bg-white text-gray-700 shadow-md mt-6 w-[32%]"
+	class="relative mt-6 flex w-full flex-col rounded-xl bg-white bg-clip-border text-gray-700 shadow-md md:w-[48%] lg:w-[32%]"
 >
-  <div class="p-6">
-    <h5
-      class="block antialiased tracking-normal font-sans text-xl font-semibold leading-snug text-blue-gray-900 mb-2"
-    >
-      {title}
-    </h5>
-    <p
-      class="block antialiased font-sans text-base font-light leading-relaxed text-inherit"
-    >
-      {description}
-    </p>
-  </div>
-  <div class="p-6 pt-0">
-    <a
-      href={`/manager/projects/${slug}`}
-      class="align-middle select-none font-sans font-bold text-center uppercase transition-all disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none text-xs py-3 px-6 rounded-lg bg-gray-900 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none"
-    >
-      Ver Proyecto
-    </a>
-  </div>
+	<div class="p-6">
+		<h5
+			class="text-blue-gray-900 mb-2 block font-sans text-xl font-semibold leading-snug tracking-normal antialiased"
+		>
+			{title}
+		</h5>
+		<p class="block font-sans text-base font-light leading-relaxed text-inherit antialiased">
+			{description}
+		</p>
+	</div>
+	<div class="p-6 pt-0">
+		<a
+			href={`/manager/projects/${slug}`}
+			class="select-none rounded-lg bg-gray-900 px-6 py-3 text-center align-middle font-sans text-xs font-bold uppercase text-white shadow-md shadow-gray-900/10 transition-all hover:shadow-lg hover:shadow-gray-900/20 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+		>
+			Ver Proyecto
+		</a>
+	</div>
 </div>
