--- a/src/components/manager/table-queue.astro
+++ b/src/components/manager/table-queue.astro
@@ -9,7 +9,7 @@ const { queues } = Astro.props
 ---
 
 <div
-	class="relative flex h-full w-full flex-col rounded-xl bg-white bg-clip-border text-gray-700 shadow-md"
+	class="relative flex h-full w-full flex-col overflow-auto rounded-xl bg-white bg-clip-border text-gray-700 shadow-md"
 >
 	<table class="w-full min-w-max table-auto text-left">
 		<thead>
