agregado boton y modal para agregar una instancia nueva de evolution api

--- a/src/pages/manager/projects/[slug].astro
+++ b/src/pages/manager/projects/[slug].astro
@@ -3,6 +3,7 @@ import LayoutAdmin from '@/layouts/layout-admin.astro'
 import TableQueues from '@/components/manager/table-queue.astro'
 import TableInstance from '@/components/manager/table-instance.astro'
 import { getProject } from '@/services/projects.services'
+import { AddInstance } from '@/React/manager/components/AddInstance'
 
 const { slug } = Astro.params
 
@@ -17,11 +18,16 @@ if (!project) {
 		<h1 class="text-2xl font-bold">Proyecto {slug}</h1>
 		<hr class="my-4" />
 		<div class="mb-4">
-			<h3 class="mb-4 text-xl font-semibold">Colas</h3>
+			<div class="mb-4 flex items-center justify-between">
+				<h3 class="text-xl font-semibold">Colas</h3>
+			</div>
 			<TableQueues queues={project.queue} />
 		</div>
 		<div class="mb-4">
-			<h3 class="mb-4 text-xl font-semibold">Instancias</h3>
+			<div class="mb-4 flex items-center justify-between">
+				<h3 class="text-xl font-semibold">Instancias</h3>
+				<AddInstance client:load projectId={project.id} />
+			</div>
 			<TableInstance instances={project.instance} />
 		</div>
 	</div>
