--- a/src/pages/manager/projects/[slug].astro
+++ b/src/pages/manager/projects/[slug].astro
@@ -2,6 +2,7 @@
 import LayoutAdmin from '@/layouts/layout-admin.astro'
 import TableQueues from '@/components/manager/table-queue.astro'
 import TableInstance from '@/components/manager/table-instance.astro'
+import TableFlows from '@/components/manager/table-flows.astro'
 import { getProject } from '@/services/projects.services'
 import { AddInstance } from '@/React/manager/components/AddInstance'
 
@@ -15,7 +16,8 @@ if (!project) {
 
 <LayoutAdmin title="Proyectos">
 	<div class="p-4">
-		<h1 class="text-2xl font-bold">Proyecto {slug}</h1>
+		<h1 class="text-2xl font-bold">Proyecto {project.name}</h1>
+		<p>{project.description}</p>
 		<hr class="my-4" />
 		<div class="mb-4">
 			<div class="mb-4 flex items-center justify-between">
@@ -30,5 +32,20 @@ if (!project) {
 			</div>
 			<TableInstance instances={project.instance} />
 		</div>
+		{
+			project.folder && (
+				<div class="mb-4">
+					<div class="mb-4 flex items-center justify-between">
+						<h3 class="text-xl font-semibold">Flujos N8N</h3>
+						{project.folder && (
+							<a href={project.folder} target="_blank" class="text-blue-500">
+								Ver flujos
+							</a>
+						)}
+					</div>
+					<TableFlows flows={project.workflows} />
+				</div>
+			)
+		}
 	</div>
 </LayoutAdmin>
