ajustado color de borde para el navbar y sidebar

--- a/src/components/manager/navbar.astro
+++ b/src/components/manager/navbar.astro
@@ -1,5 +1,5 @@
 <div class="sticky top-0 z-40" id="navbar">
-	<div class="flex h-20 w-full items-center justify-between border-b px-6">
+	<div class="flex h-20 w-full items-center justify-between border-b border-gray-600 px-6">
 		<!-- left navbar -->
 		<div class="flex">
 			<!-- mobile hamburger -->
