--- a/src/layouts/layout-admin.astro
+++ b/src/layouts/layout-admin.astro
@@ -4,9 +4,10 @@ import Navbar from '../components/manager/navbar.astro'
 
 interface Props {
 	title: string
+	classMain?: string
 }
 
-const { title } = Astro.props
+const { title, classMain } = Astro.props
 ---
 
 <!doctype html>
@@ -51,7 +52,7 @@ const { title } = Astro.props
 				<Sidebar />
 				<div class="min-h-screen w-full pl-0 lg:pl-64" id="main-content">
 					<Navbar />
-					<div class="mb-20 p-6">
+					<div class={classMain ? classMain : 'mb-20 p-6'}>
 						<slot />
 					</div>
 				</div>
